--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -14,3 +14,17 @@
  *= require_self
  */
 @import "bulma"
+
+.navbar-brand .title
+  color: white
+
+.field.is-grouped
+  align-items: center
+
+.image
+  border-radius: 50%
+  img
+    border-radius: 50%
+
+.notification:not(:last-child)
+  margin-bottom: 0
