--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,13 @@
           <p class="control">
             <%= link_to 'New Tweet', new_tweet_path, class: "button is-info is-inverted" %>
           </p>
-					<p class="control">Sign Up</p>
+          <% if user_signed_in? %>
+          <p class="control">
+            <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+          </p>
+          <% else %>
+          <p class="control"><%= link_to 'Sign In', new_user_session_path %></p>
+          <% end %>
         </div>
       </div>
     </div>
