--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,32 @@
-<h2>Forgot your password?</h2>
+<div class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-4">
+        <h2 class="title is-2">Forgot your password?</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+        <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email,
+        <div class="field">
+          <div class="control">
+            <%= f.input :email,
                 required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
-  </div>
+                input_html: { class: "input" },
+                wrapper: false,
+                label_html: { class: "label"} %>
+          </div>
+        </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
+        <div class="field">
+          <div class="control">
+            <%= f.button :submit, "Send me reset password instructions", class: "button is-info is medium" %>
+          </div>
+        </div>
+        <% end %>
 
-<%= render "devise/shared/links" %>
+        <%= render "devise/shared/links" %>
+
+      </div>
+    </div>
+  </div>
+</div>
