--- a/app/views/tweets/_feed.html.erb
+++ b/app/views/tweets/_feed.html.erb
@@ -1,14 +1,16 @@
 <div class="column is-half">
+<% if user_signed_in? %>
   <article class="media box">
     <figure class="media-left">
       <p class="image is-64x64">
-        <img src="https://bulma.io/images/placeholders/64x64.png" alt="img">
+        <%= gravatar_image_tag(current_user.email, size: 64, alt: current_user.name) %>
       </p>
     </figure>
     <div class="media-content">
       <%= render 'tweets/form' %>
     </div>
   </article>
+<% end %>
 
 
   <% @tweets.each do |tweet| %>
@@ -16,15 +18,16 @@
     <article class="media">
       <div class="media-left">
         <figure class="image is-64x64">
-          <img src="https://bulma.io/images/placeholders/64x64.png" alt="img">
+          <%= gravatar_image_tag(tweet.user.email, size: 64, alt: tweet.user.name) %>
         </figure>
       </div>
       <div class="media-content">
         <div class="content">
-          <strong>Tsay Vladislav</strong><br />
-          <small>@rubyhat</small><br />
-          <p><%= tweet.tweet  %></p>
+          <strong><%= tweet.user.name %></strong><br />
+          <small>@<%= tweet.user.username %></small><br />
+          <p><%= tweet.tweet %></p>
         </div>
+        <% if user_signed_in? %>
         <nav class="level">
           <div class="level-left is-mobile">
 
@@ -42,6 +45,7 @@
 
           </div>
         </nav>
+        <% end %>
       </div>
     </article>
   </div>
