--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,10 +1,14 @@
 <%= simple_form_for(@tweet) do |f| %>
-
-<%= f.error_notification %>
-<div class="field">
-  <div class="control">
-    <%= f.input :tweet, label: "Tweet about it", input_html: { class: "textarea"}, wrapper: false, label_html: { class: "label"}, placeholder: "Compose a new tweet" %>
+  <%= f.error_notification %>
+  <div class="field">
+    <div class="control">
+      <%= f.input :tweet, label: "Tweet about it", input_html: { class: "textarea"}, wrapper: false, label_html: { class: "label"}, placeholder: "Compose a new tweet", autofocus: true %>
+    </div>
   </div>
-</div>
-<%= f.button :submit, class: "button is-info" %>
+  <div class="field">
+    <div class="control">
+      <%= f.button :submit, class: "button is-info" %>
+      <%= link_to 'Back', tweets_path, class: "button is-info" %>
+    </div>
+  </div>
 <% end %>
