--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Tweet</h1>
-
-<%= render 'form', tweet: @tweet %>
-
-<%= link_to 'Back', tweets_path %>
+<div class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-8">
+        <h2 class="title is-2">New Tweet</h2>
+        <%= render 'form', tweet: @tweet %>
+      </div>
+    </div>
+  </div>
+</div>
